--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   PHP_VERSION: '8.2'
-  COMPOSER_INSTALL_FLAGS: '--no-interaction --no-scripts --no-progress --optimize-autoloader --ansi --ignore-platform-requirements'
+  COMPOSER_INSTALL_FLAGS: '--no-interaction --no-scripts --no-progress --optimize-autoloader --ansi --ignore-platform-reqs'
 
 jobs:
   lint:
