--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "ergebnis/composer-normalize": "^2.48",
         "lintkit/editorconfig-config": "^1.0",
         "lintkit/php-coding-standards-config": "^2.0",
-        "php-parallel-lint/php-parallel-lint": "^1.4"
+        "php-parallel-lint/php-parallel-lint": "^1.4",
+        "phpunit/phpunit": "10.5"
     },
     "autoload": {
         "psr-4": {
@@ -51,6 +52,7 @@
         }
     },
     "scripts": {
+        "clean": "rm -rf .Build",
         "composer-normalize:dry-run": "@composer-normalize:fix --dry-run",
         "composer-normalize:fix": "@composer normalize --indent-size 4 --indent-style space",
         "editorconfig:dry-run": "ec --finder-config .Build/vendor/lintkit/editorconfig-config/ec-cli-config.php",
@@ -68,6 +70,7 @@
         "parallel-lint": "parallel-lint ./ --exclude ./.Build",
         "php-cs-fixer:dry-run": "@php-cs-fixer:fix --dry-run",
         "php-cs-fixer:fix": "php-cs-fixer fix --config .Build/vendor/lintkit/php-coding-standards-config/.php-cs-fixer.php -v --diff",
+        "test-unit": "phpunit --no-coverage",
         "yaml-lint": "yaml-lint ./Configuration"
     }
 }
