text: Add functional tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,3 +77,6 @@ jobs:
 
       - name: Run Unit Tests
         run: composer test-unit
+
+      - name: Run Functional Tests
+        run: composer test-functional
