test: Update test docs & PHP unit

--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
         "lintkit/editorconfig-config": "^1.0",
         "lintkit/php-coding-standards-config": "^2.0",
         "php-parallel-lint/php-parallel-lint": "^1.4",
-        "phpunit/phpunit": "10.5"
+        "phpunit/phpunit": "^10.5"
     },
     "autoload": {
         "psr-4": {
